# TRPO

./: README.md  курсовая.docx
Student-Performance-Analytics-Dashboard-master/: README.md  student_performance_dashboard.ipynb  student_performance_data.csv  student_recommendations.xlsx
edu-manage-main/frontend/: package-lock.json
frontend/: index.html  package-lock.json  package.json
frontend/scr/: main.tsx
frontend/scr/pages/: Register.tsx
jwt-auth-main/api/: package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json
jwt-auth-main/client/: index.html
server/: .env  Cargo.toml  Creat.sql  Insert.sql  TRPO.dump  TRPO.sql  package-lock.json  package.json  testText.txt  tsconfig.json
server/file/answers/: 10.Доклад...7c6accb4-090d-453b-bb95-b8aee8541269.docx  FinOptimaProcess...1f22e1ea-b198-4596-8b7b-eacf2a98785c.bpmn  RK_Design_quests_2022...b89a33d9-19a2-4a1a-ba41-03c2b1d87a8f.docx  Solid_AdultEn...304439e5-f09f-4dde-83d5-6605233c6f35.xml  mainpage...afe05dac-8fb3-45e1-939d-6bf85f44f275.html  mainpage...b47d0822-3e5a-4a8b-944d-ee2d87005e84.js  АИС ЛР + 5-6 (1)...48ccee4c-c4fa-43e6-8b06-8e20c77e6aaf.docx
server/file/task/: task.docx
server/src/: auth.ts  course.ts  main.rs  models.rs  register.ts  state.rs  user-info.ts
server/src/handlers/: answer.rs  course.rs  mod.rs  teacher.rs  user.rs
server/static/: course.html  index.html  mainpage.html  mainpageTeacher.html  register.html  user-info.html
server/static/css/: course.css  index.css  links.css  mainpage.css  personalcabinet.css  register.css  teacherlinks.css
(+16 files in other folders)
